--- a/css/ss7_website_layout_design/exercise/create_layout_with_rwd/create_layout_with_rwd.html
+++ b/css/ss7_website_layout_design/exercise/create_layout_with_rwd/create_layout_with_rwd.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="my.css">
 </head>
 <body>
-<div class="row header">
+<div class="row header " >
     <div class="col-lg-1 col-md-1 col-sm-2">Logo</div>
     <div class="col-lg-1 col-md-1 col-sm-2">Home</div>
     <div class="col-lg-1 col-md-1 col-sm-2">About</div>
     <div class="col-lg-1 col-md-1 col-sm-2">Project</div>
     <div class="col-lg-1 col-md-1 col-sm-2">Contract</div>
-<!--    <div class="col-lg-12 col-md-6 col-sm-2">Login</div>-->
+    <div class="col-lg-6 col-md-6 col-sm-2"></div>
+    <div class="col-lg-1 col-md-1 col-sm-2" style="float: right">Login</div>
 </div>
 <div class="row">
     <div class="col-lg-2 col-md-2 left">
