--- a/case_study_web/task_1_1/task_1_1.html
+++ b/case_study_web/task_1_1/task_1_1.html
@@ -5,73 +5,149 @@
     <title>Title</title>
     <link rel="stylesheet" href="../../css/bootstrap-5.3.0-alpha1-dist/css/bootstrap.css">
     <link rel="stylesheet" href="my.css">
-    <style>
-        .logo{
-            display: flex;
-        }
-    </style>
 </head>
 <body>
 <div class="container-fluid vh-100">
+    <!--    header-->
     <div class=" d-flex justify-content-between">
         <div class="col-lg-1 left" style="width: 5%">
             <img class="img-fluid" src="img/logo (1).png" alt="logo">
         </div>
-        <div class="row m-md-2">
+        <div class="row col-lg-2 m-md-8 d-flex justify-content-center align-items-md-center ">
             Lê Hữu Tài
+            <img src="img/admin.png" style="width: 25%;height: 35%" alt="">
         </div>
     </div>
+    <!--    navbar-->
     <div class="row">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Giới thiệu</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false"
+                        aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
+                <a class="navbar-brand" href="#">Home</a>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Loại phòng</a>
+                            <a class="nav-link active" aria-current="page" href="#">Employee</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Ẩm thực</a>
+                            <a class="nav-link active" aria-current="page" href="#">Customer</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Hội nghị sự kiện</a>
+                            <a class="nav-link active" aria-current="page" href="#">Service</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link ">Spa</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link ">Giải trí</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link ">Điểm đến</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link ">Ưu đãi</a>
+                            <a class="nav-link active" aria-current="page" href="#">Control</a>
                         </li>
                     </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
                 </div>
             </div>
         </nav>
     </div>
-    <div class="row box logo vh-100" >
-        <div class=" justify-content-center" style="background-color: #ddd; width: 20%;height: 100%">
-            <p>một</p>
-            <p>hai</p>
-            <p>ba</p>
-        </div>
-        <div class=" d-flex justify-content-center align-items-center left" style="background-color: #9ec5fe; width: 80%;height: 100%">
-            <p>Nội dung</p>
+
+    <!--    slide-->
+    <div class="row ">
+        <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/Vietnam_Danang_Furama_Resort_Exterior_Beach.jpg"
+                         class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/maxresdefault.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/10953_16030216470040397599.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </div>
+
+    <!--footer-->
     <div class="row">
-        <div class="d-flex justify-content-center">
-            <p>Nội dung cuối trang</p>
-        </div>
+        <footer class="mainfooter" role="contentinfo">
+            <div class="footer-middle">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4 col-sm-6">
+                            <!--Column1-->
+                            <div class="footer-pad">
+                                <h4>Heading 1</h4>
+                                <ul class="list-unstyled">
+                                    <li><a href="#"></a></li>
+                                    <li><a href="#">Payment Center</a></li>
+                                    <li><a href="#">Contact Directory</a></li>
+                                    <li><a href="#">Forms</a></li>
+                                    <li><a href="#">News and Updates</a></li>
+                                    <li><a href="#">FAQs</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <!--Column2-->
+                            <div class="footer-pad">
+                                <ul class="list-unstyled">
+                                    <li><a href="#">Rack rate</a></li>
+                                    <li><a href="#">Lifestyle blog</a></li>
+                                    <li><a href="#">Recruitment</a></li>
+                                    <li><a href="#">Contact</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <!--Column3-->
+                            <div class="footer-pad">
+                                <h4>Contact</h4>
+                                <ul class="list-unstyled">
+                                    <li>
+                                        <img src="img/add1.png.crdownload" style="width: 5%" alt="">
+                                        <a href="#">103 - 105 Vo Nguyen Giap Street, Khue My Ward,
+                                            Ngu Hanh Son District, Danang City, Vietnam</a>
+                                    </li>
+                                    <li><a href="#">Tel.: 84-236-3847 333/888 * Fax: 84-236-3847 666</a></li>
+                                    <li><a href="#">Email: reservation@furamavietnam.com * www.furamavietnam.com</a>
+                                    </li>
+                                    <ul class="social-network social-circle">
+                                        <li><img src="img/fb.png" style="width: 7%" class="icoLinkedin"
+                                                 title="Linkedin"><i class="fa fa-linkedin"></i></img></li>
+                                        <li><img src="img/ytb2.png" style="width: 7%" class="icoLinkedin"
+                                                 title="Linkedin"><i class="fa fa-linkedin"></i></img></li>
+                                        <li><img src="img/ig.png" style="width: 7%" class="icoLinkedin"
+                                                 title="Linkedin"><i
+                                                class="fa fa-linkedin"></i></img></li>
+                                    </ul>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12 copy">
+                            <p class="text-center">&copy; 2018 Furama Resort Danang.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 </div>
 </body>
 <script src="../../css/bootstrap-5.3.0-alpha1-dist/js/bootstrap.js"></script>
 </html>
+
+
+
