--- a/case_study_web/task_1_1/task_1_1.html
+++ b/case_study_web/task_1_1/task_1_1.html
@@ -87,14 +87,25 @@
                         <div class="col-md-4 col-sm-6">
                             <!--Column1-->
                             <div class="footer-pad">
-                                <h4>Heading 1</h4>
+                                <h4>Moving Guide</h4>
+                                <p>Furama Resort is the premier base from which to explore one of Asia's most exciting
+                                    destinations.
+                                    Just a short drive from Da Nang are four UNESCO World Heritage Sites:</p>
+                                <a class="btn btn-outline-secondary" href="https://www.google.com/maps/dir//
+                                %C4%91%E1%BB%8Ba+ch%E1%BB%89+furama+resort+%C4%91%C3%A0+n%E1%BA%B5ng/data=
+                                !4m6!4m5!1m1!4e2!1m2!1m1!1s0x31420fdbc8cc38ef:
+                                0x9a6a3e31121225d2?sa=X&ved=2ahUKEwjYyKyyzqP8AhUNt1YBHYGWBM4Q9Rd6BAhgEAQ"
+                                   target="_blank">See On Map</a>
                                 <ul class="list-unstyled">
-                                    <li><a href="#"></a></li>
-                                    <li><a href="#">Payment Center</a></li>
-                                    <li><a href="#">Contact Directory</a></li>
-                                    <li><a href="#">Forms</a></li>
-                                    <li><a href="#">News and Updates</a></li>
-                                    <li><a href="#">FAQs</a></li>
+                                    <li>
+                                        <h3>Place</h3>
+                                    </li>
+                                    <li>
+                                        <a href="https://thuathienhue.gov.vn/vi-vn/Ten-duong-tinh-thua-thien-hue/cid/A064E1C0-0A55-462F-A303-988E0859B383"
+                                           target="_blank">The ancient capital of Hue</a></li>
+                                    <li><a href="https://hoian.quangnam.gov.vn/webcenter/portal/hoian" target="_blank">Hoi
+                                        An</a></li>
+                                    <li><a href="https://disanvanhoamyson.vn/" target="_blank">My Son Sanctuary</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -116,7 +127,10 @@
                                 <ul class="list-unstyled">
                                     <li>
                                         <img src="img/add1.png.crdownload" style="width: 5%" alt="">
-                                        <a href="#">103 - 105 Vo Nguyen Giap Street, Khue My Ward,
+                                        <a href="https://www.google.com/maps/dir//%C4%91%E1%BB%8Ba+ch%E1%BB%89+furama+resort
+                                        +%C4%91%C3%A0+n%E1%BA%B5ng/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31420fdbc8cc38ef:0x9a6a3e31
+                                        121225d2?sa=X&ved=2ahUKEwjYyKyyzqP8AhUNt1YBHYGWBM4Q9Rd6BAhgEAQ">103 - 105 Vo
+                                            Nguyen Giap Street, Khue My Ward,
                                             Ngu Hanh Son District, Danang City, Vietnam</a>
                                     </li>
                                     <li><a href="#">Tel.: 84-236-3847 333/888 * Fax: 84-236-3847 666</a></li>
