--- a/case_study_web/case_study_web/task_1_1/task_1_1.html
+++ b/case_study_web/case_study_web/task_1_1/task_1_1.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="../../css/bootstrap-5.3.0-alpha1-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="my.css">
+    <link rel="stylesheet" href="../../../../task_1_1/my.css">
 </head>
 <body>
 <div class="container-fluid vh-100">
     <!--    header-->
     <div class=" d-flex justify-content-between">
         <div class="col-lg-1 left" style="width: 5%">
-            <img class="img-fluid" src="img/logo (1).png" alt="logo">
+            <img class="img-fluid" src="../../../../task_1_1/img/logo%20(1).png" alt="logo">
         </div>
         <div class="row col-lg-2 m-md-8 d-flex justify-content-center align-items-md-center ">
             Lê Hữu Tài
-            <img src="img/admin.png" style="width: 25%;height: 35%" alt="">
+            <img src="../../../../task_1_1/img/admin.png" style="width: 25%;height: 35%" alt="">
         </div>
     </div>
     <!--    navbar-->
@@ -31,13 +31,14 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Employee</a>
+                            <a class="nav-link active" aria-current="page" href="http://localhost:8080/employee">Employee</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Customer</a>
+                            <a class="nav-link active" aria-current="page" href="http://localhost:8080/customer">Customer</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Service</a>
+                            <a class="nav-link active" aria-current="page"
+                               href="http://localhost:8080/facility">Service</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Control</a>
@@ -57,14 +58,14 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/Vietnam_Danang_Furama_Resort_Exterior_Beach.jpg"
+                    <img src="../../../../task_1_1/img/Vietnam_Danang_Furama_Resort_Exterior_Beach.jpg"
                          class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/maxresdefault.jpg" class="d-block w-100" alt="...">
+                    <img src="../../../../task_1_1/img/maxresdefault.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/10953_16030216470040397599.jpg" class="d-block w-100" alt="...">
+                    <img src="../../../../task_1_1/img/10953_16030216470040397599.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -126,7 +127,7 @@
                                 <h4>Contact</h4>
                                 <ul class="list-unstyled">
                                     <li>
-                                        <img src="img/add1.png.crdownload" style="width: 5%" alt="">
+                                        <img src="../../../../task_1_1/img/add1.png.crdownload" style="width: 5%" alt="">
                                         <a href="https://www.google.com/maps/dir//%C4%91%E1%BB%8Ba+ch%E1%BB%89+furama+resort
                                         +%C4%91%C3%A0+n%E1%BA%B5ng/data=!4m6!4m5!1m1!4e2!1m2!1m1!1s0x31420fdbc8cc38ef:0x9a6a3e31
                                         121225d2?sa=X&ved=2ahUKEwjYyKyyzqP8AhUNt1YBHYGWBM4Q9Rd6BAhgEAQ">103 - 105 Vo
@@ -137,11 +138,11 @@
                                     <li><a href="#">Email: reservation@furamavietnam.com * www.furamavietnam.com</a>
                                     </li>
                                     <ul class="social-network social-circle">
-                                        <li><img src="img/fb.png" style="width: 7%" class="icoLinkedin"
+                                        <li><img src="../../../../task_1_1/img/fb.png" style="width: 7%" class="icoLinkedin"
                                                  title="Linkedin"><i class="fa fa-linkedin"></i></img></li>
-                                        <li><img src="img/ytb2.png" style="width: 7%" class="icoLinkedin"
+                                        <li><img src="../../../../task_1_1/img/ytb2.png" style="width: 7%" class="icoLinkedin"
                                                  title="Linkedin"><i class="fa fa-linkedin"></i></img></li>
-                                        <li><img src="img/ig.png" style="width: 7%" class="icoLinkedin"
+                                        <li><img src="../../../../task_1_1/img/ig.png" style="width: 7%" class="icoLinkedin"
                                                  title="Linkedin"><i
                                                 class="fa fa-linkedin"></i></img></li>
                                     </ul>
